Added some style to page

--- a/index.html
+++ b/index.html
@@ -15,14 +15,22 @@
     </header>
     <body>
         
-        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google image">
+        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google image" id="googlePic">
 
         <form id="form">
-            <input type="search" id="query" name="q">
+            <input type="search" id="query" name="q"> </form> <br>
             <button>Google Search</button> <button>I'm Feeling Lucky</button>
-        </form>
+        
     </body>
     <footer>
+        <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB
+        UAAAAYCAMAAAAiV0Z6AAAAPFBMVEVLoEN0wU6CzFKCzFKCzFKCzFKCzFJS
+        o0MSczNDmkCCzFJPoUMTczNdr0gmgziCzFITczMTczMTczMTczPh00jOAA
+        AAFHRSTlPF/+bIsms8Ad///hX+//5/tXw7aMEAx10AAACaSURBVHgBbc4H
+        DoRQCATQ33tbvf9dF9QxaCT9UQaltLHOh/golXKhMs5Xqa0xU1lyoa2fX
+        FyQOsDG38qsLy4TaV+sFislovyhPzLJJrBu6eQOtpW0LjbJkzTuTDLRVN
+        Ka3uxJI+VdiRqXSeu6GW+Qxi29eLIi8H7EsYrT42BD+mQtNO5JMjRuC4l
+        SY8V4hsLX0egGijvUSEP9AbylEsOkeCgWAAAAAElFTkSuQmCC" id="leaf">
         Carbon neutral since 2007
         <nav>
             <a href="">Advertising</a>
